--- a/src/index.html
+++ b/src/index.html
@@ -4,26 +4,23 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <title>Template</title>
+  <title>Super Galactic Age Calculator</title>
 </head>
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h1>Triangle Tracker</h1>
+      <h1>Super Galactic Age Calculator</h1>
     </div>
     <div class="card border-danger mb-3">
-      <div class="card-header">Your Triangle Predicament</div>
+      <div class="card-header">Tell us what we need to know:</div>
       <div class="card-body text-danger">
         <form>
           <div class="form-row">
             <div class="col">
-              <input type="number" class="form-control first" placeholder="A">
+              <input type="number" class="form-control first" placeholder="Age">
             </div>
             <div class="col">
-              <input type="number" class="form-control second" placeholder="B">
-            </div>
-            <div class="col">
-              <input type="number" class="form-control third" placeholder="C">
+              <input type="number" class="form-control second" placeholder="Life Expectancy">
             </div>
           </div>
         </form>
